<resources>
    <string name="app_name">GistListDemoKotlin</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Favorites</string>
    <string name="tab_text_3">About</string>
    <string name="action_settings">Settings</string>
    <string name="about_frag_title">About</string>
    <string name="by">By: %s</string>
    <string name="connection_error">There was a connection error while retrieving your data. Do you wish to try again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_specified">Not specified</string>
    <string name="unknown">Anonymous</string>
    <string name="about_text">App made by João Guilherme Daros Fidelis as a demo.\nMade in December of 2017.</string>
    <string name="favs_msg">You don\'t have any favorites added!\nClick on the stars to add Gists to your favorite\'s list.</string>
    <string name="file">1 File</string>
    <string name="file_pl">%d Files</string>
</resources>
