<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jgfidelis.gistdemoapplication.fragments.favorite.FavoritesFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tab_text_2"
        android:textSize="24pt"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@android:style/TextAppearance.Material.Title" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/favs_msg"
        android:textSize="12pt"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@android:style/TextAppearance.Material.Title" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewFavs"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView" />
</RelativeLayout>
