...
    <TextView
        android:id="@+id/nameTextGist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toStartOf="@+id/button"
        android:text="TextView"
        android:textAlignment="center"
        android:singleLine="true"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textSize="14pt" />
...
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:clickable="true"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewGist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fileCount"
        android:clickable="true"/>

...
